  * Added tests for 802.11ac networking, including environment variables for
    their settings, and updated whitelists accordingly.
  * scripts/sleep_test_log_check: Rewrote the parser logic to avoid missing
    failures due to file format changes (LP: #1201667)
  * parsers/udevadm: Added additional heuristics for video devices with
    PCI subclass "2", like newer NVidia GPUs (LP: #1270139)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 10 Jan 2014 11:02:47 +0000

checkbox (0.17.2) trusty; urgency=low

  [ Daniel Manrique ]
  * Incremented changelog

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 10 Jan 2014 10:44:27 +0000

checkbox (0.17.1) trusty; urgency=low

  [ Chris Gregan ]
  * slight modification to existing touch tests to remove depends on failing
    mutitouch-automated

  [ Jeff Lane ]
  * scripts/network Handle ZeroDivisionError better (LP: #1257308)


  [ Daniel Manrique ]
  * Removed suspend_test script which hasn't been touched in over 3 years
    and is not used in any jobs. (LP: #752881)
  * Changed touchpad_test to use default scrolling method, and added a switch
    to force edge scrolling if desired. Updated legacy tests to use edge
    scrolling when the test description makes that appropriate. (LP: #1259987)
  * scripts/virtualization: Shut down the VM properly so as to not damage the
    disk image; work properly with "second-boot" VM images (LP: #1259879)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 13 Dec 2013 12:08:26 -0500

checkbox (0.17) trusty; urgency=low

  [ Chris Gregan ]
  * Updates made to touchpad and suspend jobs for new tests. 
  * Updates made to the touchscreen jobs file for new tests.

  [ Zygmunt Krynicki ]
  * Incremented changelog
  * Make plainbox-service a transitional package that depends on
    checkbox-ng-service. 

  [ Manoj Iyer ]
  * Make cpu stress test work with cloud instances. Cloud instances have
    typically have limited resources so added logic to utilize less memory,