@@ -22,6 +22,7 @@ import logging
 import os
 import re
 import sys
+import tempfile
 
 from argparse import ArgumentParser
 from subprocess import check_output, check_call, CalledProcessError
@@ -139,7 +140,7 @@ def set_profile_hdmi():
                       (profile, error))
 
 
-def get_current_profiles_settings():
+def get_current_profiles_settings(profiles_file):
     """Captures and Writes current audio profiles settings"""
     pactl_list = check_output(
         ['pactl', 'list'], universal_newlines=True, env=unlocalized_env())
@@ -156,17 +157,17 @@ def get_current_profiles_settings():
         }
 
     try:
-        with open('active_profiles', 'w') as active_profiles:
+        with open(profiles_file, 'w') as active_profiles:
             config.write(active_profiles)
     except IOError:
         logging.error("Failed to save active profiles information: %s" %
                       sys.exc_info()[1])
 
 
-def restore_profiles_settings():
+def restore_profiles_settings(profiles_file):
     config = configparser.ConfigParser()
     try:
-        config.read('active_profiles')
+        config.read(profiles_file)
     except IOError:
         logging.error("Failed to retrieve previous profiles information")
 
@@ -344,6 +345,8 @@ def main():
                         help="Turn on verbosity")
     args = parser.parse_args()
 
+    active_profiles_file = os.path.join(tempfile.gettempdir(),
+                                        'active_profiles')
     if args.verbose:
         logging.basicConfig(format='%(levelname)s:%(message)s',
                             level=logging.INFO, stream=sys.stdout)
@@ -353,7 +356,7 @@ def main():
             return 1
 
         store_audio_settings(args.file)
-        get_current_profiles_settings()
+        get_current_profiles_settings(active_profiles_file)
     elif args.action == "set":
         if not args.device:
             logging.error("No device specified to change settings of!")
@@ -366,7 +369,8 @@ def main():
             set_profile_hdmi()
         set_audio_settings(args.device, args.mute, args.volume)
     elif args.action == "restore":
-        if restore_profiles_settings() or restore_audio_settings(args.file):
+        if restore_profiles_settings(active_profiles_file) or \
+           restore_audio_settings(args.file):
             return 1
     else:
         logging.error(args.action + "is not a valid action")
