@@ -17,6 +17,8 @@ checkbox (0.17.3) UNRELEASED; urgency=low
     failures due to file format changes (LP: #1201667)
   * parsers/udevadm: Added additional heuristics for video devices with
     PCI subclass "2", like newer NVidia GPUs (LP: #1270139)
+  * checkbox/scripts/audio_settings: Place/read active_profiles in an
+    absolute, known-writable location (LP: #1271707)
 
  -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 10 Jan 2014 11:02:47 +0000
 
